Tradução do Gean copiada

--- a/i18n/pt/docusaurus-plugin-content-blog-news/2021/11-30-release-xfce.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2021/11-30-release-xfce.mdx
@@ -19,16 +19,16 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-XFCE Flavor of Archcraft is now available to download. Read the changelogs below to know what's new.
+Um novo sabor para o Archcraft está disponível para download, o XFCE. Veja o que há de novo abaixo.
 
 <!--truncate-->
 
-This flavor of Archcraft comes with XFCE.
-Xfce is a lightweight desktop environment, It aims to be fast and low on system resources.
-Archcraft XFCE is highly customized and pre-configured. It's a ready to go XFCE system.
+Esse novo sabor que o Archcraft traz é o XFCE.
+Xfce é um ambiente gráfico leve, com foco em ser rápido e nao consome muitos recursos.
+Archcraft XFCE é altamente customizado e pré configurado. Ele está pronto para ser usado no seu sistema.
 
 ### Changelogs :
-- Updated the ISO with new base
-- More minimal user interface
-- New Themes and Styles
-- And more...
+- ISO atualizada com nova base
+- Interface do usuário mínima
+- Novos temas e estilos
+- E mais...
