--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/02-02-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/02-02-release.mdx
@@ -19,11 +19,12 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-February 2022 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de fevereiro de 2022 disponível para download. Veja o que há de novo abaixo.
 
 <!--truncate-->
 
-### Changelogs :
+### Changelog
+
 - Updated Alacritty Configs
 - Updated Dunst Configs
 - Updated Few Scripts
