--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/04-07-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/04-07-release.mdx
@@ -23,7 +23,8 @@ April 2022 ISO of Archcraft is now available to download. Read the changelogs be
 
 <!--truncate-->
 
-### Changelogs :
+### Changelog
+
 - Removed a bunch of useless packages (`pamac`, `pcmanfm`, `leafpad`, `bmon`, `bashtop`, `neovim` and a lot more)
 - Updated all packages and window managers
 - Few minor changes in `Openbox`
