--- a/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/dynamic-wm/dwm.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/dynamic-wm/dwm.mdx
@@ -5,6 +5,9 @@ hide_table_of_contents: false
 
 # DWM
 
+Para membros da comunidade Archcraft, edite a página.
+
+
 <!-- Theme ---------------------------------------- -->
 <!-- Tabs -->
 import Tabs from '@theme/Tabs';
