--- a/i18n/pt/docusaurus-plugin-content-blog-news/2021/10-05-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2021/10-05-release.mdx
@@ -19,15 +19,16 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-October 2021 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de outubro de 2021 está disponível para download. Veja o que há de novo abaixo.
 
 <!--truncate-->
 
-Many users faced issues with the September release, due to the bug in the installer.
-However it was not a big issue and can be fixed easily, But there are people who are completely new to Linux in general.
-So, this release belongs to them. This release fixes every issue on the previous release.
+Muitos usuários enfrentaram problemas com a versão de setembro, devido ao bug no instalador.
+No entanto, não foi um grande problema e pode ser corrigido facilmente, mas há pessoas que são completamente novas no Linux em geral.
+Portanto, este lançamento pertence a eles. Esta versão corrige todos os problemas da versão anterior.
 
-### Changelogs :
+### Changelog
+
 **`Bug Fix Release for v21.09`**
 - Fixed `drivers getting removed via installer` bug (backlight, external monitor issues)
 - Removed support for `flatpak` as it caused issue with thunar and plank (and other gtk applications)
