--- a/i18n/pt/docusaurus-plugin-content-blog-news/authors.yml
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/authors.yml
@@ -1,5 +1,5 @@
 adi1090x:
   name: Aditya Shakya
-  title: Developer of Archcraft
+  title: Desenvolvedor do Archcraft
   url: https://github.com/adi1090x
   image_url: https://github.com/adi1090x.png
