--- a/i18n/pt/docusaurus-plugin-content-blog-news/options.json
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/options.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "News",
+    "message": "Notícias",
     "description": "The title for the blog used in SEO"
   },
   "description": {
@@ -8,7 +8,7 @@
     "description": "The description for the blog used in SEO"
   },
   "sidebar.title": {
-    "message": "Latest News",
+    "message": "Últimas notícias",
     "description": "The label for the left sidebar"
   }
 }
