--- a/i18n/pt/docusaurus-plugin-content-docs/current.json
+++ b/i18n/pt/docusaurus-plugin-content-docs/current.json
@@ -1,6 +1,6 @@
 {
   "version.label": {
-    "message": "Next",
+    "message": "Pŕoximo",
     "description": "The label for version current"
   },
   "sidebar.tutorialSidebar.category.Boot Archcraft": {
@@ -8,7 +8,7 @@
     "description": "The label for category Boot Archcraft in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Install Archcraft": {
-    "message": "Install Archcraft",
+    "message": "Instalar Archcraft",
     "description": "The label for category Install Archcraft in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Window Managers": {
@@ -28,7 +28,7 @@
     "description": "The label for category Dynamic WMs in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Wayland Compositors": {
-    "message": "Wayland Compositors",
+    "message": "Compositores Wayland",
     "description": "The label for category Wayland Compositors in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Premium ISOs": {
@@ -44,7 +44,7 @@
     "description": "The label for category Archcraftify in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Contribution": {
-    "message": "Contribution",
+    "message": "Contribuição",
     "description": "The label for category Contribution in sidebar tutorialSidebar"
   }
 }
